web/styles/left_sidebar.css
/* ... */
.left-sidebar-navigation-area {
    & li a {
        &:hover {
            text-decoration: none;
        }
    }
}

#left_sidebar_scroll_container {
    outline: none;
    overflow: hidden auto;
    position: relative;
    z-index: 0;
    width: 100%;

    .direct-messages-container {
        /* TODO: Clean up this value and the
           analogous one on #stream-filters;
           this could be done alongside the
           --left-sidebar-collapse-widget-gutter
           cleanup so that all of the left sidebar
           space is better, more uniformly handled.
           That will be an essential pre-condition
           for a resizable left sidebar. */
        margin-right: 12px;
        margin-left: 0;
    }
}

.direct-messages-container {
    /* Properly offset all the grid rows
       in the DM section. */
    margin-right: 12px;

    #private_messages_section_header {
        grid-template-columns: 0 15px minmax(0, 1fr) max-content 30px 0;
        grid-template-rows: 24px;
        /* TODO: Rewrite the `--left-sidebar-collapse-widget-gutter`
           value and the styles dependent on it so that this kind of
           1990s layout shenanigans is made unnecessary. */
        margin-left: -3px;
        cursor: pointer;
        white-space: nowrap;

        #toggle_private_messages_section_icon {
            grid-area: starting-anchor-element;
        }

        .left-sidebar-title {
            grid-area: row-content;
        }

        .heading-markers-and-controls {
            grid-area: markers-and-controls;
            display: flex;
            gap: 5px;
            align-items: center;
        }

        #show_all_private_messages {
            width: var(--left-sidebar-header-icon-width);
            display: flex;
            align-items: center;
            justify-content: center;
            opacity: 0.7;
            text-decoration: none;
            color: inherit;

            &:hover {
                opacity: 1;
            }
        }
    }

    & ul.dm-list {
        list-style-type: none;
        font-weight: 400;
        margin-left: 0;
        margin-bottom: 0;

        & span.fa-group {
            font-size: 90%;
        }

        & li.dm-list-item {
            & a {
                text-decoration: none;
                color: inherit;
            }

            .fa-group,
            .zulip-icon {
                opacity: 0.7;
            }
        }

        & li#show-more-direct-messages {
            cursor: pointer;

            & a {
                font-size: 12px;
            }

            .unread_count {
                margin-top: 2px;
            }
        }
    }
}

#toggle_private_messages_section_icon,
#toggle-top-left-navigation-area-icon {
    opacity: 0.7;

    &.fa-caret-right {
        position: relative;
        left: 3px;
    }

    &:hover {
        opacity: 1;
    }

    &:focus {
        outline: 0;
    }

    /* This renders an outline when the caret is reached
       with the keyboard, although that is not at present
       easily accomplished. */
    &:focus-visible {
        outline: 2px solid var(--color-outline-focus);
    }
}

.active_private_messages_section {
    #private_messages_section,
    #direct-messages-list,
    #hide-more-direct-messages {
        background-color: hsl(202deg 56% 91%);
    }

    #private_messages_section {
        border-radius: 4px 4px 0 0;
    }

    #direct-messages-list {
        border-radius: 0 0 4px 4px;
    }

    #more_private_messages_sidebar_title {
        font-weight: 600;
    }
}

:not(.active-sub-filter) {
    &.top_left_row:hover,
    &.bottom_left_row:hover {
        background-color: var(--color-background-hover-narrow-filter);
    }
}

.top_left_row,
.bottom_left_row {
    /* Ensure a border radius on any interactive
       state that might show a highlight. */
    border-radius: 4px;
}

#stream_filters .narrow-filter.highlighted_stream {
    &.active-filter > .bottom_left_row {
        background-color: var(--color-background-hover-narrow-filter);
    }

    &.active-filter .topic-list .bottom_left_row {
        background-color: var(--color-background-active-narrow-filter);
    }

    .bottom_left_row:not(.active-sub-filter) {
        background-color: var(--color-background-hover-narrow-filter);
    }
}

#login-link-container,
#subscribe-to-more-streams {
    text-decoration: none;
    margin: 5px auto 5.5px 10px;
    margin-bottom: $bottom_scrolling_buffer;

    & i {
        min-width: 19px;
        text-align: center;

        &::before {
            padding-right: 3px;
        }
    }
}

#login-link-container .login_button {
    display: flex;
    align-items: center;
}
/* ... */

